# my-service-bus-persistence

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  diagra.drawio  gulpfile.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
TypeScript/: HtmlMain.ts  HtmlStatusBar.ts  UncompressedPage.ts  contracts.d.ts  html.ts  main.ts  subpagesWidget.ts  tableBuilder.ts
proto/: MyServicePersistenceGrpcService.proto
src/: main.rs  page_blob_utils.rs  settings.rs  typing.rs
src/app/: app_ctx.rs  app_error.rs  azure_storage_operations_with_retry.rs  current_pages_cluster.rs  data_by_topic.rs  file_name_generators.rs  mod.rs  prometheus_metrics.rs  topic_data.rs  topic_data_metrics.rs  topics_data_list.rs
src/app/azure_storage_with_retries/: create_container_if_not_exists.rs  mod.rs
src/app/logs/: cluster.rs  logs.rs  mod.rs
src/app/prometheus_metrics/: mod.rs  (+2 more)
src/archive_storage/: archive_file_no.rs  archive_storage.rs  archive_storage_list.rs  consts.rs  mod.rs  toc.rs
src/azure_page_blob_writer/: mod.rs  page_blob_append_cache.rs  page_blob_buffer.rs  page_blob_random_access.rs  page_blob_utils.rs
src/azure_storage/: consts.rs  data_initializer.rs  messages_page_blob.rs  mod.rs  page_blob_utils.rs
src/azure_storage_with_retries/: azure_storage_err_handler.rs  mod.rs  trait_with_retries.rs
src/background/: mod.rs  pages_gc.rs  presist_gc_and_compress.rs  save_messages_timer.rs  topics_snapshot_saver.rs
src/bcl_proto/: bcl_date_time_utils.rs
src/compressed_page/: compressed_cluster.rs  compressed_cluster_id.rs  mod.rs
src/compressed_pages/: cluster_page_id.rs  compressed_page.rs  compressed_pages_pool.rs  error.rs  mod.rs  page_cluster_azure_blob.rs  utils.rs
src/compression/: zip.rs
src/date_time/: mod.rs
src/file_random_access/: file_random_access.rs  file_random_access_engine.rs  file_random_access_in_mem.rs  mod.rs
src/grpc/: compressed_page_compiler.rs  contracts.rs  mappers.rs  messages_persistence_grpc.rs  messages_persistence_mappers.rs  mod.rs  persistence_grpc_service.rs  server.rs  topic_snapshot_grpc.rs  topic_snapshot_mappers.rs
src/http/: builder.rs  http_ctx.rs  http_fail_result.rs  http_ok_result.rs  http_server.rs  mod.rs  query_string.rs  start_up.rs  url_utils.rs  web_content_type.rs
src/index_by_minute/: azure_page_blob.rs  index_by_minute_handler.rs  index_by_minute_list.rs  index_by_minute_storage.rs  indexes_by_minute.rs  message_index_builder_data.rs  minute_within_year.rs  mod.rs  update_queue.rs  utils.rs  yearly_index_by_minute.rs
src/message_pages/: blank_page.rs  compressed_page.rs  data_by_topic.rs  error.rs  messages_page.rs  messages_page_data.rs  metrics.rs  mod.rs  page_id.rs  page_metrics.rs  pages_list.rs  sub_page.rs  sub_page_inner.rs  sub_page_read_copy.rs  uncompressed_page.rs  utils.rs
src/message_pages_loader/: message_pages_loader.rs  mod.rs
src/messages_in_blob/: mod.rs  uncompressed_messages_blob.rs
src/messages_protobuf/: messages_stream.rs  mod.rs  protobuf_model.rs
src/operations/: archive_io.rs  before_shut_down.rs  compress_page_if_needed.rs  compress_previous_page.rs  compressed_page_compiler.rs  current_sub_pages_io.rs  data_initializer.rs  delete_topic.rs  error.rs  gc.rs  gc_pages.rs  gc_uncompressed_pages.rs  gc_yearly_index.rs  get_active_pages.rs  get_compressed_cluster_to_read.rs  get_compressed_cluster_to_write.rs  get_message_by_id.rs  get_messages_from_date.rs  get_or_create_topic_data.rs  get_or_restore_page.rs  get_page_to_publish_messages.rs  get_page_to_read.rs  get_sub_page_to_read.rs  get_topic_data_to_publish_messages.rs  get_topic_data_to_write.rs  get_uncompressed_page_to_read.rs  hard_delete_topic.rs  index_by_minute.rs  init_new_topic.rs  init_page_storage.rs  message_pages_loader.rs  messages.rs  messages_stream.rs  mod.rs  new_messages.rs  page_compression.rs  pages.rs  persist_topic_pages.rs  restore_page.rs  restore_page_error.rs  (+4 more)
src/page_blob_random_access/: mod.rs  page_blob_page_id.rs  page_blob_random_access.rs  page_cache.rs  random_access_data.rs  utils.rs
src/sub_page/: mod.rs  sub_page.rs  sub_page_messages_iterator.rs
src/timers/: deleted_topics_gc.rs  metrics_updater.rs  mod.rs  pages_gc.rs  save_and_gc_messages_timer.rs  save_messages.rs  save_messages_timer.rs  save_min_index.rs  timer_3s.rs  topics_snapshot_saver.rs
src/toc/: content_offset.rs  file_toc.rs  mod.rs  payload_no.rs
src/toipics_snapshot/: blob_repository.rs  current_snapshot.rs  mod.rs  protobuf_model.rs
src/topic_data/: mod.rs  topic_data.rs  topic_data_metrics.rs  topics_data_list.rs
src/topics_snapshot/: blob_repository.rs  current_snapshot.rs  mod.rs  page_blob_storage.rs  protobuf_model.rs
src/uncompressed_messages/: error.rs  messages_page_blob.rs  messages_stream.rs  mod.rs
src/uncompressed_page/: mod.rs  new_messages.rs  page_metrics.rs  payloads_upload_container.rs  read_intervals_compiler.rs  uncompressed_page.rs  uncompressed_page_data.rs  uncompressed_page_id.rs  uncompressed_pages_list.rs  utils.rs
src/uncompressed_page_storage/: error.rs  file_no.rs  load_trait.rs  mod.rs  storage.rs  topic_soft_delete_metadata.rs  upload_payload.rs  utils.rs
src/uncompressed_pages/: mod.rs  uncompressed_page.rs
src/utils/: base_64_exts.rs  duration_utils.rs  lazy_objects.rs  min_max.rs  mod.rs  stop_watch.rs
wwwroot/: Index.html
wwwroot/js/: app.js
(+116 files in other folders)
