[package]
name = "my-sb-persistence"
version = "2.2.4"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-azure-storage-sdk = { branch = "0.3.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-service-bus-shared = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }

my-http-server = { branch = "0.2.3", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-swagger = { branch = "0.2.3", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
my-http-server-controllers = { branch = "0.2.3", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }

rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
chrono = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
base64 = "*"
zip = "*"
md5 = "*"
anyhow = "*"
futures-core = "*"
prost = "*"
prost-types = "*"
tokio-stream = "*"
async-trait = "*"
futures-util = "*"
tokio-signal = "*"
signal-hook = "*"
rand = "*"
sysinfo = "*"
prometheus = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
