[package]
name = "my-sb-persistence"
version = "2.2.6"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus = { tag = "1.0.3", git = "https://github.com/MyJetTools/my-service-bus-sdk.git", features = [
    "shared",

] }
my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-azure-page-blob-random-access = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-azure-page-blob-random-access.git" }
my-azure-page-blob-ext = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-azure-page-blob-ext.git" }

my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "controllers",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-grpc-extensions = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
chrono = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
base64 = "*"
zip = "*"
md5 = "*"
anyhow = "*"
futures-core = "*"
prost = "*"
prost-types = "*"
tokio-stream = "*"
async-trait = "*"
futures-util = "*"
tokio-signal = "*"
signal-hook = "*"
rand = "*"
sysinfo = "*"
prometheus = "*"
futures = "*"
jemallocator = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
